# cloud-provider-azure

./: .codespellignore  .dockerignore  .gitignore  .golangci-test.yml  .golangci.bck.yml  .golangci.yml  .travis.yml  .trivyignore  404.html  AGENTS.md  BUILD.bazel  CNAME  CONTEXT.md  CONTRIBUTING.md  DEFERRED_ISSUES.md  Dockerfile  Dockerfile.node  Gopkg.toml  Makefile  OWNERS  README.md  SECURITY_CONTACTS  WORKSPACE  agents.md  azure-pipelines.yml  buildx-bake.hcl  cloud-node-manager-windows-hpc.Dockerfile  cloud-node-manager-windows.Dockerfile  cloud-node-manager.Dockerfile  cloudbuild.yaml  e2e.Dockerfile  glide.yaml  go.mod  go.sum  index.html  index.xml  netlify.toml  offline-search-index.0253617bd7004a87ff1e6847be8dfcb8.json  offline-search-index.0b68c79c0f50decc760be0d6ac151adc.json  offline-search-index.0b72d0720223608870a4482a398def4f.json  (+131 more)
cmd/cloud-controller-manager/: BUILD.bazel  controller-manager.go
cmd/cloud-controller-manager/app/: BUILD.bazel  controllermanager.go  controllermanager_test.go  core.go  core_test.go
cmd/cloud-node-manager/: BUILD.bazel  node-manager.go
cmd/cloud-node-manager/app/: BUILD.bazel  init_others.go  init_windows.go  nodemanager.go
pkg/auth/: BUILD.bazel  azure_auth.go  azure_auth_test.go
pkg/azureclients/: BUILD.bazel  azure_client_config.go  azure_client_config_test.go  doc.go
pkg/azureclients/armclient/: BUILD.bazel  azure_armclient.go  azure_armclient_test.go  interface.go  util.go
pkg/azureclients/blobclient/: azure_blobclient.go  azure_blobclient_test.go  interface.go
pkg/azureclients/containerserviceclient/: BUILD.bazel  azure_containerserviceclient.go  azure_containerserviceclient_test.go  interface.go
pkg/azureclients/deploymentclient/: BUILD.bazel  azure_deploymentclient.go  azure_deploymentclient_test.go  interface.go
pkg/azureclients/diskclient/: BUILD.bazel  azure_diskclient.go  azure_diskclient_test.go  interface.go
pkg/azureclients/fileclient/: BUILD.bazel  azure_fileclient.go  interface.go
pkg/azureclients/interfaceclient/: BUILD.bazel  azure_interfaceclient.go  azure_interfaceclient_test.go  interface.go
pkg/azureclients/loadbalancerclient/: BUILD.bazel  azure_loadbalancerclient.go  azure_loadbalancerclient_test.go  interface.go
pkg/azureclients/privatednsclient/: azure_privatednsclient.go  azure_privatednsclient_test.go  interface.go
pkg/azureclients/privatednszonegroupclient/: azure_privatednszonegroupclient.go  azure_privatednszonegroupclient_test.go  interface.go
pkg/azureclients/privateendpointclient/: azure_privateendpointclient.go  azure_privateendpointclient_test.go  interface.go
pkg/azureclients/privatelinkserviceclient/: azure_privatelinkserviceclient.go  azure_privatelinkserviceclient_test.go  interface.go
pkg/azureclients/publicipclient/: BUILD.bazel  azure_publicipclient.go  azure_publicipclient_test.go  interface.go
pkg/azureclients/routeclient/: BUILD.bazel  azure_routeclient.go  azure_routeclient_test.go  interface.go
pkg/azureclients/routetableclient/: BUILD.bazel  azure_routetableclient.go  azure_routetableclient_test.go  interface.go
pkg/azureclients/securitygroupclient/: BUILD.bazel  azure_securitygroupclient.go  azure_securitygroupclient_test.go  interface.go
pkg/azureclients/snapshotclient/: BUILD.bazel  azure_snapshotclient.go  azure_snapshotclient_test.go  interface.go
pkg/azureclients/storageaccountclient/: BUILD.bazel  azure_storageaccountclient.go  azure_storageaccountclient_test.go  interface.go
pkg/azureclients/subnetclient/: BUILD.bazel  azure_subnetclient.go  azure_subnetclient_test.go  interface.go
pkg/azureclients/v2/: Makefile  client_config.go  go.mod  go.sum
pkg/azureclients/virtualnetworklinksclient/: azure_virtualnetworklinksclient.go  azure_virtualnetworklinksclient_test.go  interface.go
pkg/azureclients/vmasclient/: azure_vmasclient.go  azure_vmasclient_test.go  interface.go
pkg/azureclients/vmclient/: BUILD.bazel  azure_vmclient.go  azure_vmclient_test.go  interface.go
pkg/azureclients/vmsizeclient/: BUILD.bazel  azure_vmsizeclient.go  azure_vmsizeclient_test.go  interface.go
pkg/azureclients/vmssclient/: BUILD.bazel  azure_vmssclient.go  azure_vmssclient_test.go  interface.go  models.go
pkg/azureclients/vmssvmclient/: BUILD.bazel  azure_vmssvmclient.go  azure_vmssvmclient_test.go  interface.go  models.go
pkg/azureclients/zoneclient/: azure_zoneclient.go  (+2 more)
pkg/cache/: BUILD.bazel  azure_cache.go  azure_cache_test.go
pkg/metrics/: BUILD.bazel  azure_batch_metrics.go  azure_metrics.go  azure_metrics_test.go
pkg/mockvmsets/: BUILD.bazel  azure_mock_vmsets.go  doc.go
pkg/node/: BUILD.bazel  node.go  nodearm.go  nodeproviderfactory.go
pkg/nodemanager/: BUILD.bazel  eventchecker.go  nodemanager.go  nodemanager_test.go
pkg/provider/: BUILD.bazel  azure.go  azure_backoff.go  azure_backoff_test.go  azure_blobDiskController.go  azure_blobDiskController_test.go  azure_config.go  azure_config_test.go  azure_controller_common.go  azure_controller_common_test.go  azure_controller_standard.go  azure_controller_standard_test.go  azure_controller_vmss.go  azure_controller_vmss_test.go  azure_controller_vmssflex.go  azure_controller_vmssflex_test.go  azure_fakes.go  azure_file.go  azure_initialize_test.go  azure_instance_metadata.go  azure_instance_metadata_test.go  azure_instances.go  azure_instances_test.go  azure_instances_v1.go  azure_instances_v2.go  azure_interface_repo.go  azure_interface_repo_test.go  azure_loadbalancer.go  azure_loadbalancer_accesscontrol.go  azure_loadbalancer_accesscontrol_test.go  azure_loadbalancer_backendpool.go  azure_loadbalancer_backendpool_test.go  azure_loadbalancer_healthprobe.go  azure_loadbalancer_healthprobe_test.go  azure_loadbalancer_repo.go  azure_loadbalancer_repo_test.go  azure_loadbalancer_test.go  azure_local_services.go  azure_local_services_test.go  azure_location_and_nrp_service_batch_updater.go  (+69 more)
pkg/retry/: BUILD.bazel  azure_error.go  azure_error_test.go  azure_retry.go  azure_retry_test.go  etagmismatch_error.go  etagmismatch_error_test.go
tests/e2e/: BUILD.bazel  e2e_test.go
(+2013 files in other folders)
