load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "azure_cache.go",
        "doc.go",
    ],
    importpath = "sigs.k8s.io/cloud-provider-azure/pkg/cache",
    visibility = ["//visibility:public"],
    deps = ["//vendor/k8s.io/client-go/tools/cache:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["azure_cache_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
