load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "azure.go",
        "azure_backoff.go",
        "azure_blobDiskController.go",
        "azure_config.go",
        "azure_controller_common.go",
        "azure_controller_standard.go",
        "azure_controller_vmss.go",
        "azure_fakes.go",
        "azure_file.go",
        "azure_instance_metadata.go",
        "azure_instances.go",
        "azure_loadbalancer.go",
        "azure_managedDiskController.go",
        "azure_ratelimit.go",
        "azure_routes.go",
        "azure_standard.go",
        "azure_storage.go",
        "azure_storageaccount.go",
        "azure_utils.go",
        "azure_vmsets.go",
        "azure_vmss.go",
        "azure_vmss_cache.go",
        "azure_wrap.go",
        "azure_zones.go",
        "doc.go",
    ],
    importpath = "sigs.k8s.io/cloud-provider-azure/pkg/provider",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth:go_default_library",
        "//pkg/azureclients:go_default_library",
        "//pkg/azureclients/containerserviceclient:go_default_library",
        "//pkg/azureclients/deploymentclient:go_default_library",
        "//pkg/azureclients/diskclient:go_default_library",
        "//pkg/azureclients/diskclient/mockdiskclient:go_default_library",
        "//pkg/azureclients/fileclient:go_default_library",
        "//pkg/azureclients/interfaceclient:go_default_library",
        "//pkg/azureclients/interfaceclient/mockinterfaceclient:go_default_library",
        "//pkg/azureclients/loadbalancerclient:go_default_library",
        "//pkg/azureclients/loadbalancerclient/mockloadbalancerclient:go_default_library",
        "//pkg/azureclients/publicipclient:go_default_library",
        "//pkg/azureclients/publicipclient/mockpublicipclient:go_default_library",
        "//pkg/azureclients/routeclient:go_default_library",
        "//pkg/azureclients/routeclient/mockrouteclient:go_default_library",
        "//pkg/azureclients/routetableclient:go_default_library",
        "//pkg/azureclients/routetableclient/mockroutetableclient:go_default_library",
        "//pkg/azureclients/securitygroupclient:go_default_library",
        "//pkg/azureclients/securitygroupclient/mocksecuritygroupclient:go_default_library",
        "//pkg/azureclients/snapshotclient:go_default_library",
        "//pkg/azureclients/storageaccountclient:go_default_library",
        "//pkg/azureclients/subnetclient:go_default_library",
        "//pkg/azureclients/subnetclient/mocksubnetclient:go_default_library",
        "//pkg/azureclients/vmclient:go_default_library",
        "//pkg/azureclients/vmclient/mockvmclient:go_default_library",
        "//pkg/azureclients/vmsizeclient:go_default_library",
        "//pkg/azureclients/vmssclient:go_default_library",
        "//pkg/azureclients/vmssclient/mockvmssclient:go_default_library",
        "//pkg/azureclients/vmssvmclient:go_default_library",
        "//pkg/azureclients/vmssvmclient/mockvmssvmclient:go_default_library",
        "//pkg/cache:go_default_library",
        "//pkg/metrics:go_default_library",
        "//pkg/retry:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/compute/mgmt/2020-06-30/compute:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/network/mgmt/2019-06-01/network:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/storage/mgmt/2019-06-01/storage:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/storage:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/adal:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/azure:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/to:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
        "//vendor/github.com/rubiojr/go-vhd/vhd:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/uuid:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/util/feature:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/typed/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/tools/record:go_default_library",
        "//vendor/k8s.io/cloud-provider:go_default_library",
        "//vendor/k8s.io/cloud-provider/service/helpers:go_default_library",
        "//vendor/k8s.io/cloud-provider/volume:go_default_library",
        "//vendor/k8s.io/cloud-provider/volume/errors:go_default_library",
        "//vendor/k8s.io/cloud-provider/volume/helpers:go_default_library",
        "//vendor/k8s.io/component-base/featuregate:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
        "//vendor/k8s.io/utils/net:go_default_library",
        "//vendor/sigs.k8s.io/yaml:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "azure_blobDiskController_test.go",
        "azure_config_test.go",
        "azure_controller_common_test.go",
        "azure_controller_standard_test.go",
        "azure_controller_vmss_test.go",
        "azure_instances_test.go",
        "azure_loadbalancer_test.go",
        "azure_managedDiskController_test.go",
        "azure_ratelimit_test.go",
        "azure_routes_test.go",
        "azure_standard_test.go",
        "azure_storage_test.go",
        "azure_storageaccount_test.go",
        "azure_test.go",
        "azure_utils_test.go",
        "azure_vmss_cache_test.go",
        "azure_vmss_test.go",
        "azure_wrap_test.go",
        "azure_zones_test.go",
        "main_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/auth:go_default_library",
        "//pkg/azureclients:go_default_library",
        "//pkg/azureclients/diskclient/mockdiskclient:go_default_library",
        "//pkg/azureclients/fileclient:go_default_library",
        "//pkg/azureclients/fileclient/mockfileclient:go_default_library",
        "//pkg/azureclients/interfaceclient/mockinterfaceclient:go_default_library",
        "//pkg/azureclients/loadbalancerclient/mockloadbalancerclient:go_default_library",
        "//pkg/azureclients/publicipclient/mockpublicipclient:go_default_library",
        "//pkg/azureclients/routetableclient/mockroutetableclient:go_default_library",
        "//pkg/azureclients/securitygroupclient/mocksecuritygroupclient:go_default_library",
        "//pkg/azureclients/storageaccountclient/mockstorageaccountclient:go_default_library",
        "//pkg/azureclients/subnetclient/mocksubnetclient:go_default_library",
        "//pkg/azureclients/vmclient/mockvmclient:go_default_library",
        "//pkg/azureclients/vmssclient/mockvmssclient:go_default_library",
        "//pkg/azureclients/vmssvmclient/mockvmssvmclient:go_default_library",
        "//pkg/cache:go_default_library",
        "//pkg/mockvmsets:go_default_library",
        "//pkg/retry:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/compute/mgmt/2020-06-30/compute:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/network/mgmt/2019-06-01/network:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/storage/mgmt/2019-06-01/storage:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/storage:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/azure:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/to:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/fake:go_default_library",
        "//vendor/k8s.io/cloud-provider:go_default_library",
        "//vendor/k8s.io/cloud-provider/service/helpers:go_default_library",
        "//vendor/k8s.io/cloud-provider/volume:go_default_library",
        "//vendor/k8s.io/utils/pointer:go_default_library",
        "//vendor/sigs.k8s.io/yaml:go_default_library",
    ],
)
