load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["e2e_test.go"],
    deps = [
        "//tests/e2e/auth:go_default_library",
        "//tests/e2e/autoscaling:go_default_library",
        "//tests/e2e/network:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/ginkgo/config:go_default_library",
        "//vendor/github.com/onsi/ginkgo/reporters:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)
