load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["nodemanager.go"],
    importpath = "sigs.k8s.io/cloud-provider-azure/cmd/cloud-node-manager/app",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/cloud-node-manager/app/config:go_default_library",
        "//cmd/cloud-node-manager/app/options:go_default_library",
        "//pkg/node:go_default_library",
        "//pkg/nodemanager:go_default_library",
        "//pkg/version:go_default_library",
        "//pkg/version/verflag:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/server:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/server/healthz:go_default_library",
        "//vendor/k8s.io/component-base/cli/flag:go_default_library",
        "//vendor/k8s.io/component-base/cli/globalflag:go_default_library",
        "//vendor/k8s.io/component-base/term:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
        "//vendor/k8s.io/kubernetes/cmd/controller-manager/app:go_default_library",
    ],
)
