load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "azure_fileclient.go",
        "doc.go",
        "interface.go",
    ],
    importpath = "sigs.k8s.io/cloud-provider-azure/pkg/azureclients/fileclient",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/azureclients:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/storage/mgmt/2019-06-01/storage:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)
