load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "azure_routeclient.go",
        "doc.go",
        "interface.go",
    ],
    importpath = "sigs.k8s.io/cloud-provider-azure/pkg/azureclients/routeclient",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/azureclients:go_default_library",
        "//pkg/azureclients/armclient:go_default_library",
        "//pkg/metrics:go_default_library",
        "//pkg/retry:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/network/mgmt/2019-06-01/network:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/azure:go_default_library",
        "//vendor/k8s.io/client-go/util/flowcontrol:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["azure_routeclient_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/azureclients:go_default_library",
        "//pkg/azureclients/armclient:go_default_library",
        "//pkg/azureclients/armclient/mockarmclient:go_default_library",
        "//pkg/retry:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/network/mgmt/2019-06-01/network:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/to:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/k8s.io/client-go/util/flowcontrol:go_default_library",
    ],
)
