load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mock_node_provider.go"],
    importpath = "sigs.k8s.io/cloud-provider-azure/pkg/nodemanager/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/stretchr/testify/mock:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/cloud-provider:go_default_library",
    ],
)
